# sistemas_inteligentes

./: .gitignore  README.md  aula8.ipynb  knn.ipynb  main.py  tree.py
.obsidian/: appearance.json  workspace.json
perceptron/: CMakeLists.txt
